--- a/mydataharbor-redis-plugin/pom.xml
+++ b/mydataharbor-redis-plugin/pom.xml
@@ -32,7 +32,7 @@
     <dependency>
       <groupId>com.mydataharbor</groupId>
       <artifactId>mydataharbor-sink-redis</artifactId>
-      <version>${mydataharbor.version}</version>
+      <version>1.1.0</version>
     </dependency>
   </dependencies>
 </project>
