--- a/mydataharbor-sink-redis/pom.xml
+++ b/mydataharbor-sink-redis/pom.xml
@@ -24,5 +24,12 @@
       <groupId>io.netty</groupId>
       <artifactId>netty-all</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>com.mydataharbor</groupId>
+      <artifactId>mydataharbor-redis-common</artifactId>
+      <version>1.1.0</version>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 </project>
