--- a/mydataharbor-redis-plugin/redis-5.2.x-plugin/pom.xml
+++ b/mydataharbor-redis-plugin/redis-5.2.x-plugin/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.mydataharbor</groupId>
 		<artifactId>mydataharbor-redis-plugin</artifactId>
-		<version>1.1.0</version>
+		<version>${revision}</version>
 	</parent>
 	<artifactId>redis-5.2.x-plugin</artifactId>
 
