--- a/mydataharbor-redis-plugin/redis-5.3.x-plugin/pom.xml
+++ b/mydataharbor-redis-plugin/redis-5.3.x-plugin/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.mydataharbor</groupId>
     <artifactId>mydataharbor-redis-plugin</artifactId>
-    <version>1.1.0</version>
+    <version>${revision}</version>
   </parent>
   <artifactId>redis-5.3.x-plugin</artifactId>
 
