--- a/mydataharbor-redis-plugin/redis-plugin/pom.xml
+++ b/mydataharbor-redis-plugin/redis-plugin/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <artifactId>mydataharbor-redis-plugin</artifactId>
     <groupId>com.mydataharbor</groupId>
-    <version>1.1.0</version>
+    <version>${revision}</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
@@ -24,17 +24,11 @@
   </description>
 
   <dependencies>
-    <dependency>
-      <groupId>com.mydataharbor</groupId>
-      <artifactId>mydataharbor-redis-common</artifactId>
-      <version>1.1.0</version>
-    </dependency>
 
     <dependency>
       <groupId>com.mydataharbor</groupId>
-      <artifactId>mydataharbor-sink-redis</artifactId>
-      <version>1.1.0</version>
-      <scope>test</scope>
+      <artifactId>mydataharbor-redis-sink</artifactId>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 
