--- a/mydataharbor-redis-sink/pom.xml
+++ b/mydataharbor-redis-sink/pom.xml
@@ -4,9 +4,9 @@
   <parent>
     <groupId>com.mydataharbor</groupId>
     <artifactId>mydataharbor-redis</artifactId>
-    <version>1.1.0</version>
+    <version>${revision}</version>
   </parent>
-  <artifactId>mydataharbor-sink-redis</artifactId>
+  <artifactId>mydataharbor-redis-sink</artifactId>
   <description>写入redis</description>
   <dependencies>
     <dependency>
@@ -28,8 +28,7 @@
     <dependency>
       <groupId>com.mydataharbor</groupId>
       <artifactId>mydataharbor-redis-common</artifactId>
-      <version>1.1.0</version>
-      <scope>provided</scope>
+      <version>${project.version}</version>
     </dependency>
   </dependencies>
 </project>
