--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,1 @@
-**/target/**
-!.mvn/wrapper/maven-wrapper.jar
-
-### STS ###
-.apt_generated
-.classpath
-.factorypath
-.project
-.settings
-.springBeans
-.sts4-cache
-
-### IntelliJ IDEA ###
-.idea
-*.iws
-*.iml
-*.ipr
-
-### NetBeans ###
-/nbproject/private/
-/nbbuild/
-/dist/
-/nbdist/
-/.nb-gradle/
-/build/
-
-
-logs/
-plugins/
-dbdata/
-
-.flattened-pom.xml
+/target/
